# wanchain-crosschain-contracts

./: .gitignore  migrations  package-lock.json  package.json  truffle-config.js  truffle.js
audit/: solidity vulnerability.xlsx
btc-wan-cross/: package.json  truffle.js
contracts/: AdminInterface.sol  CoinAdmin.sol  ConvertLib.sol  ERC20Protocol.sol  HTLCBase.sol  HTLCETH.sol  HTLCWAN.sol  HTLCWBTC.sol  HTLCWETH.sol  Halt.sol  ImprovedStoremanGroupAdmin.sol  QuotaLedger.sol  SafeMath.sol  SimpleToken.sol  StandardToken.sol  StoremanGroup.sol  StoremanGroupAdmin.sol  StoremanGroupAdminInterface.sol  StoremanLottery.sol  StoremanNode.sol  StoremanNodesAdmin.sol  TokenManager.sol  WBTC.sol  WBTCManager.sol  WETH.sol  WETHManager.sol  WTokenManagerInterface.sol  WanToken.sol
eos-wan-cross/: package.json
eos-wan-cross/c++/htlc.eos.v.1/: CMakeLists.txt  build.sh  htlc.eos.v.1.abi  htlc.eos.v.1.cpp  htlc.eos.v.1.hpp  htlc.eos.v.1.wasm
eos-wan-cross/c++/htlc.eos.v.1/include/: curvePoint.hpp  debugFlag.hpp  fieldInt.hpp  htlc.hpp  schnorr.hpp  tools.hpp  type.hpp  uint256.hpp  utils.hpp
eos-wan-cross/c++/htlc.eos.v.1/src/: curvePoint.cpp  fieldInt.cpp  htlc.abi  htlc.cpp  htlc.wasm  htlcDebug.cpp  htlcHelp.cpp  schnorr.cpp  uint256.cpp  utils.cpp
eos-wan-cross/c++/htlc.eos.v.1/test/: HTLC.js  config.js  lib.js  utils.js
eos-wan-cross/c++/htlc.eos.v.1/test/schnorr/: test.js  tools.js
eos-wan-cross/c++/htlc.eos.v.1/test/signature/: sig.abi  sig.wasm
eth-wan-cross/: package.json  truffle.js
init/: contractsInitTestNet_BTC.js  contractsInitTestNet_ETH.js
(+192 files in other folders)
